--- a/client/styles/home.css
+++ b/client/styles/home.css
@@ -16,7 +16,7 @@
   box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.2);
 }
 
-.second {
+.dashboard {
   background-color: white;
   width: 100vw;
   display: flex;
@@ -31,7 +31,7 @@
   height: 31%;
 }
 
-.second-aside {
+.dashboard-aside {
   display: flex;
   flex: 1;
   flex-direction: column;
